--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "remakejs",
   "version": "0.2.0",
   "description": "A framework for building web apps quickly",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/panphora/remakejs"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
