added support for "path:" argument in data-o-save attributes to the data-i-new attribute
creating new items with the data-i-new attribute will recompute the "path:" argument

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.es6.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "rollup -c --watch"
   },
   "author": "David Miranda",
   "license": "MIT",
