--- a/bundle/package.json
+++ b/bundle/package.json
@@ -9,7 +9,7 @@
     "parcel": "parcel ./project-files/assets/js/main.js --out-dir ./_remake/dist/ --out-file main.dist.js --no-hmr",
     "sass": "sass --watch project-files/assets/sass/main.sass _remake/dist/main.dist.css",
     "copy-assets": "copy-and-watch --watch project-files/assets/**/*.{ico,png,jpg,gif} _remake/dist",
-    "build": "parcel build public/index.js --out-dir ./public/dist",
+    "build": "parcel build ./project-files/assets/js/main.js --out-dir ./_remake/dist/ --out-file main.dist.js && sass --style=compressed project-files/assets/sass/main.sass _remake/dist/main.dist.css",
     "start": "node server.js"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "crostini": "^1.0.3",
     "deep-extend": "^0.6.0",
     "deepdash-es": "^4.2.5",
+    "delegated-events": "^1.1.0",
     "directory-tree": "^2.2.3",
     "dotenv": "^8.0.0",
     "esm": "^3.2.25",
@@ -30,19 +31,18 @@
     "express-session": "^1.16.2",
     "handlebars": "^4.1.2",
     "jsonfile": "^5.0.0",
-    "lodash-es": "^4.17.11",
+    "lodash": "^4.17.15",
     "nanoid": "^2.0.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path-match": "^1.2.4",
-    "remakejs": "^0.7.0",
     "session-file-store": "^1.3.1"
   },
   "devDependencies": {
-    "copy-and-watch": "^0.1.4",
-    "sass": "^1.22.9",
     "concurrently": "^4.1.0",
+    "copy-and-watch": "^0.1.4",
     "nodemon": "^1.19.1",
-    "parcel": "^1.12.3"
+    "parcel": "^1.12.3",
+    "sass": "^1.22.9"
   }
 }
