Major updates and improvements (see commit description)
- `data-i-new` doesn't require as many arguments now. It defaults to adding a new item to the closest `[data-o-type="list"]` element
- `data-i-editable` doesn't require any arguments now. It defaults to creating an inline edit popover for all data on the current element
- `data-o-save` is no longer required to save data. It defaults to saving data to the unique id specified in the closest `data-o-key-id` or, if none is found, it saves the entire page
- `data-i-remove` and `data-i-hide` elements can exist outside of an inline edit popover. They find the closest element with data and remove the whole element or just clear its data.
- There's now a list of reserved words that can't be used as a username (e.g. "admin")
- (framework code) Bootstrap data is now assembled into an object that's separate from the partials' data
- There's a new custom handlebars helper: `#forEachItem`. This allows you to define the name of an item inline instead of by using a partial. This makes it possible to make an app in a single template instead of being forced to use partials if you want to use the `data-i-new` attribute
- There are three other new custom handlebars helpers: `#BaseRoute`, `#UsernameRoute`, `#ItemRoute`. These allow you to easily determine the type of route you're on when rendering your page.

--- a/bundle/.gitignore
+++ b/bundle/.gitignore
@@ -3,6 +3,6 @@ node_modules/
 .cache/
 variables.env
 npm-debug.log
-_remake/.sessions
+_remake/.sessions/**/*.json
 _remake/dist
 _remake-data/**/*.json
