--- a/bundle/package.json
+++ b/bundle/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "camelcase": "^5.3.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
@@ -36,7 +36,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path-match": "^1.2.4",
-    "session-file-store": "^1.3.1"
+    "session-file-store": "^1.3.1",
+    "upath": "^1.2.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
