--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "bin": {
     "remake": "bin/remake"
   },
-  "scripts": {},
+  "scripts": {
+    "site-serve": "eleventy --serve",
+    "site-build": "eleventy"
+  },
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0"
   },
