--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "commander": "^3.0.0",
     "nanoid": "^2.0.3",
     "ncp": "^2.0.0",
+    "rimraf": "^3.0.0",
     "shelljs": "^0.8.3"
   }
 }
