--- a/bundle/package.json
+++ b/bundle/package.json
@@ -29,7 +29,8 @@
     "esm": "^3.2.25",
     "express": "^4.17.0",
     "express-session": "^1.16.2",
-    "handlebars": "^4.1.2",
+    "handlebars": "^4.3.3",
+    "handlebars-helpers": "^0.10.0",
     "jsonfile": "^5.0.0",
     "lodash": "^4.17.15",
     "nanoid": "^2.0.3",
