--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "boxen": "^4.1.0",
     "chalk": "^2.4.2",
     "commander": "^3.0.0",
+    "es6-promisify": "^6.0.2",
+    "inquirer": "^7.0.0",
     "nanoid": "^2.0.3",
     "ncp": "^2.0.0",
     "rimraf": "^3.0.0",
