--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "inquirer": "^7.0.0",
     "nanoid": "^2.0.3",
     "ncp": "^2.0.0",
+    "ora": "^4.0.2",
     "rimraf": "^3.0.0",
     "shelljs": "^0.8.3"
   }
