--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "site-build": "eleventy"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0"
+    "@11ty/eleventy": "^0.9.0",
+    "handlebars": "^4.5.3"
   },
   "dependencies": {
     "archiver": "^3.1.1",
