Refactor create command
+Change project name in package.json
+Set version to 1.0.0 in package.json

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nanoid": "^2.0.3",
     "ncp": "^2.0.0",
     "ora": "^4.0.2",
+    "replace": "^1.2.0",
     "rimraf": "^3.0.0",
     "shelljs": "^0.8.4"
   }
