Add link-domain command

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "es6-promisify": "^6.0.2",
     "form-data": "^2.5.1",
     "inquirer": "^7.0.0",
+    "is-valid-domain": "0.0.17",
     "nanoid": "^2.0.3",
     "ncp": "^2.0.0",
     "ora": "^4.0.2",
