--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^2.4.2",
     "commander": "^3.0.0",
     "configstore": "^5.0.0",
+    "deep-extend": "^0.6.0",
     "es6-promisify": "^6.0.2",
     "form-data": "^2.5.1",
     "inquirer": "^7.0.0",
@@ -38,12 +39,11 @@
     "shelljs": "^0.8.4"
   },
   "devDependencies": {
-    "husky": "^4.3.0",
+    "husky": "^7.0.0",
     "prettier": "2.1.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "prettier --check ."
-    }
+  "scripts": {
+    "prepare": "husky install",
+    "prettier-check": "prettier --check ."
   }
 }
